--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GradGPT - AI-Powered CVs for African Students</title>
+    <link rel="icon" href="src/logo.png">
     <meta name="description" content="GradGPT helps African students create ATS-friendly CVs and cover letters with localized templates and AI-powered content." />
     <meta name="author" content="GradGPT" />
 
